compositions/valkey/examples/pod.yaml
# Example 1
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
    - name: redis
      image: redis:alpine
      command: ["sleep", "infinity"]
---
# Example 2
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
    - name: redis
      image: redis:alpine
      command: ["sleep", "infinity"]
---
# Example 3
apiVersion: v1
kind: Pod
metadata:
  name: redis
spec:
  containers:
    - name: redis
      image: redis:alpine
      command: ["sleep", "infinity"]
      volumeMounts:
        - name: credentials
          mountPath: /etc/credentials
          readOnly: true
  volumes:
    - name: credentials
      secret:
        secretName: example-valkey-credentials
        items:
          - key: credentials.json
            path: credentials.json
